--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -43,16 +43,10 @@
 	<business:Services />
 
 	<mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
-		<mx:Canvas width="100%" height="66" backgroundImage="@Embed(source='assets/images/openwms_banner.jpg')" backgroundSize="100%">
-			<mx:Image source="@Embed('assets/images/openwms_header.png')" />
-		</mx:Canvas>
+        <view:HeaderComponent />
 		<mx:Canvas width="100%" height="25" backgroundImage="@Embed(source='assets/images/breadcrumbs.jpg')" backgroundSize="100%">
 			<mx:MenuBar id="mainMenuBar"  labelField="@label" itemClick="onMenuChange(event)" color="#00286e" fontWeight="bold" fontSize="12" alpha="0.0">
             <mx:XMLList>
-                    <menuitem label="Application">
-                        <menuitem label="Connect ..." enabled="false" />
-                        <menuitem label="Logout" enabled="false" />
-                    </menuitem>
                     <menuitem label="Administration">
                         <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
                         <menuitem label="Roles" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
