--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/LoginView.mxml
@@ -22,22 +22,19 @@
  */
 -->
 <mx:TitleWindow xmlns:mx="http://www.adobe.com/2006/mxml" width="300" height="220" backgroundColor="#FFFFFF"
-	backgroundAlpha="0.5" borderStyle="solid" alpha="1" borderThickness="3" title="Application Login">
-
-    <mx:Metadata>
-        [Event(name="login", type="org.openwms.web.flex.client.event.SecurityEvent")]
-    </mx:Metadata>
+	backgroundAlpha="0.5" borderStyle="solid" alpha="1" borderThickness="3" title="Application Login" show="onShow();">
 
 	<mx:Script>
     <![CDATA[
-        import org.openwms.web.flex.client.event.SecurityEvent
         
         [Bindable]
         public var loginMessageText:String = "";
         [Bindable]
-        public var authenticated:Boolean = false;
-        [Bindable]
         public var onLogin:Function = null;
+        
+        private function onShow():void {
+        	myUser.setFocus();
+        }
         
     ]]>
 	</mx:Script>
